# cursor-workflow-rules

./: .commitlintrc.json  .eslintignore  .eslintrc.js  .gitignore  .markdownlint.json  .prettierignore  AGENTS.md  CHANGELOG.md  COMMAND_AUDIT_REPORT.md  DOCUMENTATION_INSTRUCTIONS_REPORT.md  DUPLICATE_FILES_REPORT.md  INTEGRATION_GUIDE.md  NOTION_PROJECT_SETUP.md  QUICK_INTEGRATION.md  README.md  RENAMING_GUIDE.md  SECURITY_CHECKLIST.md  STANDARDS_INTEGRATION_GUIDE.md  full_seo_automation_system_v_1_0.md  package-lock.json  package.json  sitemap_auto_generation_supabase_v_1_0.md
.husky/: commit-msg  pre-commit
modules/supabase-core-python/: COMPLETENESS_CHECK.md  INTEGRATION_GUIDE.md  KNOWN_ISSUES.md  README.md  README_TESTING.md  TESTING_NEEDED.md  pyproject.toml  pytest.ini  requirements.txt
modules/supabase-core-python/examples/: basic_usage.py  django_views.py  fastapi_app.py  flask_routes.py
modules/supabase-core-python/scripts/: generate-types.py
modules/supabase-core-python/src/: __init__.py
modules/supabase-core-python/src/client/: __init__.py  auth_client.py  create_client.py
modules/supabase-core-python/src/database/: __init__.py  pagination.py  query_builder.py  rls_helpers.py
modules/supabase-core-python/src/framework/: __init__.py
modules/supabase-core-python/src/realtime/: __init__.py  subscription.py
modules/supabase-core-python/tests/: __init__.py  conftest.py  test_client.py  test_framework_integrations.py  test_pagination.py  test_query_builder.py  test_storage.py  test_utils.py
modules/supabase-core-python/types/: database_types.py
(+391 files in other folders)
